# mo2-fomod-plus

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ps1  compile_commands.json  copy_translations.cmake  fomod_plus.proj.DotSettings  library.h  package.ps1  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: Colors.h.D98C40677DE8FD31.idx  ConditionTester.cpp.C3D327635EF49B3E.idx  ConditionTester.h.ABDDDB5376A076BB.idx  CrashHandler.cpp.CD71CEE699E65621.idx  CrashHandler.h.2F5B01C9D6F7DAB6.idx  FileInstaller.cpp.6534F0FE622B2FF4.idx  FileInstaller.h.D8912EA57757D588.idx  FlagMap.h.3D401B3464320EC7.idx  FomodDataContent.cpp.92014AC8B50E6B12.idx  FomodDataContent.h.AE2820474FEC064E.idx  FomodImageViewer.cpp.EB77B27687CB75B0.idx  FomodImageViewer.h.55DC7B410B9D101F.idx  FomodInfoFile.cpp.568480EABA59C29F.idx  FomodInfoFile.h.FB667FB2242FB0BA.idx  FomodInstallerWindow.cpp.7B89AE4677A353DF.idx  FomodInstallerWindow.h.70F86DA4FC6F0745.idx  FomodPlusInstaller.cpp.932350E0391EA81C.idx  FomodPlusInstaller.h.257F9D153A6DC6A7.idx  FomodPlusScanner.cpp.66A4AA38B8F25456.idx  FomodPlusScanner.h.8F7C879312CBF34E.idx  FomodViewModel.cpp.3C15DD0AE472F4F2.idx  FomodViewModel.h.235FCBF6C9439D71.idx  Logger.h.3FA0A0CF65E3792B.idx  ModuleConfiguration.cpp.83A5CCB7F549133A.idx  ModuleConfiguration.h.AC82A7B6999846C4.idx  ScaleLabel.cpp.B8CA79C4EC4148BB.idx  ScaleLabel.h.ACFD5557328EEA3F.idx  UIHelper.cpp.56177E2927B9ACF9.idx  UIHelper.h.40252473F6CD0529.idx  ViewModels.h.B6CA18E6B592E143.idx  XmlHelper.h.4A94D93AC74BCB6E.idx  XmlParseException.h.7FE352903B8726CF.idx  stringutil.h.36AD770A3CA16ECE.idx
.claude/: settings.local.json
.github/workflows/: build.yml
FPModlist/: CMakeLists.txt  IPluginModlist.h
cmake/: patch_pugixml.cmake
installer/: CMakeLists.txt  FomodInstallerWindow.cpp  FomodInstallerWindow.h  FomodPlusInstaller.cpp  FomodPlusInstaller.h  fomod_plus_installer_de.ts  fomod_plus_installer_en.ts  fomod_plus_installer_zh_CN.ts  fomodplus.json  resources.qrc
installer/integration/: FomodDataContent.cpp  FomodDataContent.h
installer/lib/: ConditionTester.cpp  ConditionTester.h  CrashHandler.cpp  CrashHandler.h  FileInstaller.cpp  FileInstaller.h  FlagMap.cpp  FlagMap.h  Logger.h  ViewModels.h  stringutil.h
installer/ui/: ClickableWidget.h  Colors.h  FomodImageViewer.cpp  FomodImageViewer.h  FomodViewModel.cpp  FomodViewModel.h  ScaleLabel.cpp  ScaleLabel.h  UIHelper.cpp  UIHelper.h
installer/xml/: FomodInfoFile.cpp  FomodInfoFile.h  ModuleConfiguration.cpp  ModuleConfiguration.h  XmlHelper.h  XmlParseException.h
patchfinder/: CMakeLists.txt  FomodPlusPatchFinder.cpp  FomodPlusPatchFinder.h  fomod_plus_patch_finder_en.ts  fomod_plus_patchfinder_de.ts  fomodpluspatchfinder.json
patchfinder/lib/: PatchFinder.cpp  PatchFinder.h
patchwizard/: CMakeLists.txt  FomodPlusPatchWizard.cpp  FomodPlusPatchWizard.h  ModDetailsWidget.cpp  ModDetailsWidget.h  ModListItemModel.cpp  ModListItemModel.h  fomod_plus_patch_wizard_en.ts  fomod_plus_patchwizard_de.ts  fomod_plus_patchwizard_en.ts  fomodpluspatchwizard.json  resources.qrc  util.h
patchwizard/lib/: PatchFinder.cpp  PatchFinder.h
scanner/: CMakeLists.txt  FomodArchiveReader.cpp  FomodArchiveReader.h  FomodPlusScanner.cpp  FomodPlusScanner.h  archiveparser.h  fomod_plus_scanner_de.ts  fomod_plus_scanner_en.ts  fomod_plus_scanner_zh_CN.ts  fomodplusscanner.json  resources.qrc
share/: PluginReader.h  resources.qrc  scanner_rules.h  stringutil.h
share/FOMODData/: ArchiveExtractor.h  ConditionEvaluator.h  FomodDB.h  FomodDBEntry.h  FomodRescan.h  PluginReader.h
share/TESData/: RecordPath.cpp  RecordPath.h  SingleRecordParser.cpp  SingleRecordParser.h
share/TESFile/: Reader.h  Reader.inl  Stream.h  Type.h
share/xml/: FomodInfoFile.cpp  FomodInfoFile.h  ModuleConfiguration.cpp  ModuleConfiguration.h  XmlHelper.h  XmlParseException.h
shared/: CMakeLists.txt
shared/include/fomod_plus_shared/: stringutil.h
src/: CMakeLists.txt  FomodInstallerWindow.cpp  FomodInstallerWindow.h  FomodPlus.cpp  FomodPlus.h  InstallerFomodPlus.cpp  InstallerFomodPlus.h  stringconstants.h
src/integration/: FomodDataContent.cpp  FomodDataContent.h  FomodDataContentWrapper.h
src/lib/: ConditionTester.cpp  ConditionTester.h  FileInstaller.cpp  FileInstaller.h  FlagMap.h  stringutil.h
src/ui/: FomodViewModel.cpp  FomodViewModel.h  ScaleLabel.cpp  ScaleLabel.h  UIHelper.cpp  UIHelper.h
src/util/: ConditionTester.cpp  ConditionTester.h  DialogStateManager.cpp  DialogStateManager.h  FlagMap.h  stringutil.h
src/xml/: FomodInfoFile.cpp  FomodInfoFile.h  ModuleConfiguration.cpp  ModuleConfiguration.h  XmlParseException.h
test-mods/: CouldBeUsable-Test.7z
test-mods/CouldBeUsable-Test/: always-cbu.txt  cbu-a.txt  cbu-b.txt  conditional.txt  couldbeusable-static.txt  no-dep.txt  normal-opt.txt  notusable.txt  optional.txt  recommended.txt  ref-optional.txt  required.txt  skyui-patch.txt
test-mods/CouldBeUsable-Test/fomod/: ModuleConfig.xml  info.xml
tests/: CMakeLists.txt  test_fomod.xml  test_fomod_info_file.cpp  test_module_configuration.cpp  test_moduleconf_bos.cpp  test_moduleconf_citytrees.cpp  test_moduleconf_citytrees.xml  test_moduleconf_lux.cpp  test_moduleconf_precision.cpp  test_moduleconf_xavbio.cpp  test_scanner_rules.cpp  test_stringutil.cpp
tests/fomoddata/: Lux - JK's The Hag's Cure patch.esp  test-db.json  test-entry.json  test_conditionevaluator.cpp  test_fomoddb.cpp  test_fomoddbentry.cpp  test_pluginreader.cpp
tests/moduleconf/: test_moduleconf_bos.cpp  test_moduleconf_bos.xml  test_moduleconf_citytrees.cpp  test_moduleconf_citytrees.xml  test_moduleconf_embers.cpp  test_moduleconf_embers.xml  test_moduleconf_lux.cpp  test_moduleconf_lux.xml  test_moduleconf_miniembers.cpp  test_moduleconf_miniembers.xml  test_moduleconf_precision.cpp  test_moduleconf_precision.xml  test_moduleconf_xavbio.cpp  test_moduleconf_xavbio.xml
